# restapi/operations/address/get_address_agent_responses.go
@@ -1,0 +1,102 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package address
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/AlexandrGurkin/tasker/models"
+)
+
+// GetAddressAgentOKCode is the HTTP code returned for type GetAddressAgentOK
+const GetAddressAgentOKCode int = 200
+
+/*GetAddressAgentOK OK
+
+swagger:response getAddressAgentOK
+*/
+type GetAddressAgentOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.RequestAgent `json:"body,omitempty"`
+}
+
+// NewGetAddressAgentOK creates GetAddressAgentOK with default headers values
+func NewGetAddressAgentOK() *GetAddressAgentOK {
+
+	return &GetAddressAgentOK{}
+}
+
+// WithPayload adds the payload to the get address agent o k response
+func (o *GetAddressAgentOK) WithPayload(payload *models.RequestAgent) *GetAddressAgentOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get address agent o k response
+func (o *GetAddressAgentOK) SetPayload(payload *models.RequestAgent) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAddressAgentOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetAddressAgentBadRequestCode is the HTTP code returned for type GetAddressAgentBadRequest
+const GetAddressAgentBadRequestCode int = 400
+
+/*GetAddressAgentBadRequest Bad Request
+
+swagger:response getAddressAgentBadRequest
+*/
+type GetAddressAgentBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ResponseError `json:"body,omitempty"`
+}
+
+// NewGetAddressAgentBadRequest creates GetAddressAgentBadRequest with default headers values
+func NewGetAddressAgentBadRequest() *GetAddressAgentBadRequest {
+
+	return &GetAddressAgentBadRequest{}
+}
+
+// WithPayload adds the payload to the get address agent bad request response
+func (o *GetAddressAgentBadRequest) WithPayload(payload *models.ResponseError) *GetAddressAgentBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get address agent bad request response
+func (o *GetAddressAgentBadRequest) SetPayload(payload *models.ResponseError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAddressAgentBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
